pass state to dumb components via input

--- a/src/app/admin/components/item-card/item-card.component.html
+++ b/src/app/admin/components/item-card/item-card.component.html
@@ -1,1 +1,7 @@
-<p>item-card works!</p>
+<div class="item-card">
+  <img src="/assets/img/{{data.icon}}.svg" [alt]="data.name" class="item-card-icon" />
+  <div>
+    <p class="item-card-name">{{data.name}}</p>
+    <p class="item-card-price">{{data.price}}</p>
+  </div>
+</div>
