--- a/src/app/admin/containers/item-list/item-list.component.html
+++ b/src/app/admin/containers/item-list/item-list.component.html
@@ -1,3 +1,5 @@
 <div>
-  <app-item-card></app-item-card>
+  <app-item-card [data]="item"></app-item-card>
+  <app-item-card [data]="items[1]"></app-item-card>
+  <app-item-card [data]="items[2]"></app-item-card>
 </div>
