complex classes with ngClass

--- a/src/app/admin/components/item-card/item-card.component.scss
+++ b/src/app/admin/components/item-card/item-card.component.scss
@@ -12,6 +12,9 @@
   &-name{
     font-size: 16px;
   }
+  &-promo{
+    border: 2px solid #eee
+  }
   &-price{
     font-size: 14px;
     color: #c14583;
