use a pipe to format currency

--- a/src/app/admin/components/item-card/item-card.component.html
+++ b/src/app/admin/components/item-card/item-card.component.html
@@ -2,6 +2,6 @@
   <img src="/assets/img/{{data.icon}}.svg" [alt]="data.name" class="item-card-icon" />
   <div>
     <p class="item-card-name">{{data.name}}</p>
-    <p class="item-card-price">{{data.price}}</p>
+    <p class="item-card-price">{{(data.price/100)|currency}}</p>
   </div>
 </div>
