--- a/src/app/admin/containers/item-list/item-list.component.html
+++ b/src/app/admin/containers/item-list/item-list.component.html
@@ -1,5 +1,10 @@
 <div>
-  <app-item-card [data]="item"></app-item-card>
-  <app-item-card [data]="items[1]"></app-item-card>
-  <app-item-card [data]="items[2]"></app-item-card>
+  <ng-container *ngIf="items.length; else loading">
+    <app-item-card [data]="item"></app-item-card>
+    <app-item-card [data]="items[1]"></app-item-card>
+    <app-item-card [data]="items[2]"></app-item-card>
+  </ng-container>
+  <ng-template #loading>
+    <p>Loading...</p>
+  </ng-template>
 </div>
