--- a/src/app/admin/containers/item-list/item-list.component.html
+++ b/src/app/admin/containers/item-list/item-list.component.html
@@ -1,6 +1,6 @@
 <div>
   <ng-container *ngIf="items.length; else loading">
-    <app-item-card *ngFor="let item of items" [data]="item"></app-item-card>
+    <app-item-card *ngFor="let item of items; trackBy: onTrackBy" [data]="item"></app-item-card>
   </ng-container>
   <ng-template #loading>
     <p>Loading...</p>
