use ngForm with a template ref variable

--- a/src/app/admin/components/item-form/item-form.component.html
+++ b/src/app/admin/components/item-form/item-form.component.html
@@ -1,1 +1,7 @@
-<p>item-form works!</p>
+<form class="item-form" #formRef="ngForm">
+  <label>
+    <span>Name</span>
+    <input type="text" class="input" name="name" placeholder="Name" ngModel>
+  </label>
+  <pre>{{formRef.value | json}}</pre>
+</form>
