input binding with ngModel

--- a/src/app/admin/components/item-form/item-form.component.html
+++ b/src/app/admin/components/item-form/item-form.component.html
@@ -3,5 +3,9 @@
     <span>Name</span>
     <input type="text" class="input" name="name" placeholder="Name" ngModel>
   </label>
+  <label>
+    <span>Price</span>
+    <input type="number" class="input" name="price" placeholder="Price" ngModel>
+  </label>
   <pre>{{formRef.value | json}}</pre>
 </form>
