--- a/src/styles.scss
+++ b/src/styles.scss
@@ -98,7 +98,7 @@ form .ng-invalid.ng-touched {
       align-items: center;
       span {
         color: #444;
-        margin-bottom: 0;
+        margin: 3px 3px 0px 5px;
       }
     }
   }
