--- a/src/app/admin/components/item-form/item-form.component.html
+++ b/src/app/admin/components/item-form/item-form.component.html
@@ -7,6 +7,12 @@
     <span>Price</span>
     <input type="number" class="input" name="price" placeholder="Price" ngModel>
   </label>
+  <label>
+    <span>Icon</span>
+    <select class="input" name="icon" ngModel>
+      <option *ngFor="let icon of icons" [ngValue]="icon">{{icon}}</option>
+    </select>
+  </label>
   <div class="item-form-radios">
     <p class="item-form-radios-label">Promo:</p>
     <label>
