textarea binding with ngModel

--- a/src/app/admin/components/item-form/item-form.component.html
+++ b/src/app/admin/components/item-form/item-form.component.html
@@ -25,5 +25,8 @@
       <input type="radio" name="promo" value="limited" ngModel> <span>Limited</span>
     </label>
   </div>
+  <label>
+    <textarea name="description" class="input input--textarea" ngModel></textarea>
+  </label>
   <pre>{{formRef.value | json}}</pre>
 </form>
