--- a/src/app/admin/containers/item-details/item-details.component.html
+++ b/src/app/admin/containers/item-details/item-details.component.html
@@ -1,3 +1,3 @@
 <div>
-  <app-item-form (create)="onCreate($event)" [item]="item"></app-item-form>
+  <app-item-form (create)="onCreate($event)" (update)="onUpdate($event)" [item]="item"></app-item-form>
 </div>
