--- a/src/app/admin/containers/item-details/item-details.component.html
+++ b/src/app/admin/containers/item-details/item-details.component.html
@@ -1,3 +1,4 @@
 <div>
-  <app-item-form (create)="onCreate($event)" (update)="onUpdate($event)" [item]="item"></app-item-form>
+  <app-item-form (create)="onCreate($event)" (update)="onUpdate($event)" (delete)="onDelete($event)"
+    [item]="item"></app-item-form>
 </div>
