Root module routes with for root

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
     <strong>{{title}}</strong>
   </header>
   <div class="container">
-    <app-item-details></app-item-details>
+    <router-outlet></router-outlet>
   </div>
 </div>
